Change dynamoDB table hash key from gameName to user